レイアウト調整

--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -7,6 +7,11 @@
 {% block title %}情報一覧{% endblock %}
 
 {% block contents %}
+<style>
+    .nav-tabs>.nav-item>.nav-link {
+        padding: 0.4rem !important;
+    }
+</style>
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
