input[text]のサイズ調整

--- a/app/templates/app/partials/member_edit.html
+++ b/app/templates/app/partials/member_edit.html
@@ -11,9 +11,13 @@
         margin-bottom: 20px
     }
 
+    .member_edit input[type="text"]{
+        width: 40%;
+    }
+
 </style>
 
-<div class="wrapper">
+<div class="wrapper member_edit">
     <h1 class="mb-4">{{ title }}</h1>
 
     <form id="form" action="{{ form_action }}" method="post">
