--- a/app/templates/app/partials/member_edit.html
+++ b/app/templates/app/partials/member_edit.html
@@ -23,7 +23,7 @@
     <form id="form" action="{{ form_action }}" method="post">
         {% csrf_token %}
 
-        <div class="mt-2 mb-4">
+        <div class="mt-2 mb-4 d-flex align-items-center">
             <label for="{{ member_form.name.id_for_label }}">名前：</label>
             {{ member_form.name }}
         </div>
