スタッフの上のマージンを削除

--- a/app/templates/app/info.html
+++ b/app/templates/app/info.html
@@ -127,7 +127,7 @@
                         <td>
                             {% if staff %}
                             <div>
-                                <div class="mt-1">{{ staff.display | linebreaksbr }}</div>
+                                <div class=>{{ staff.display | linebreaksbr }}</div>
                             </div>  
                             
                             <div class="mt-1">
