--- a/app/templates/app/partials/current_status_modal.html
+++ b/app/templates/app/partials/current_status_modal.html
@@ -14,17 +14,16 @@
 
         <div class="modal-body">
           {% for value, label in current_status_choices %}
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="current_status"
-              value="{{ value }}"
-              {% if value == member.current_status %}checked{% endif %}>
-            <label class="form-check-label">
-              {{ label }}
-            </label>
-          </div>
+            <div class="form-check">
+              <label class="form-check-label radio-large">
+                <input
+                  type="radio"
+                  name="current_status"
+                  value="{{ value }}"
+                  {% if value == member.current_status %}checked{% endif %}>
+                {{ label }}
+              </label>
+            </div>
           {% endfor %}
         </div>
 
@@ -41,9 +40,7 @@
             <input type="hidden" name="member_type" value="{{ member_type }}">
             <input type="hidden" name="work_date" value="{{ work_date }}">
         </div>
-
       </form>
-
     </div>
   </div>
 </div>
