ボタンの間を開けた

--- a/app/templates/app/partials/current_status_modal.html
+++ b/app/templates/app/partials/current_status_modal.html
@@ -14,7 +14,7 @@
 
         <div class="modal-body">
           {% for value, label in current_status_choices %}
-            <div class="form-check">
+            <div class="form-check mt-2">
               <label class="form-check-label radio-large">
                 <input
                   type="radio"
