--- a/app/templates/app/partials/history_modal.html
+++ b/app/templates/app/partials/history_modal.html
@@ -13,15 +13,13 @@
         </div>
 
         <div class="modal-body">
-          
+          {{ member.change_history }}
         </div>
 
         <div class="modal-footer">
           <button
             type="submit"
-            class="btn btn-primary"
-            name="edit_current_status"
-            value="{{ member.id }}">
+            class="btn btn-primary">
             閉じる
           </button>
         </div>
