--- a/app/templates/app/partials/history_modal.html
+++ b/app/templates/app/partials/history_modal.html
@@ -1,10 +1,6 @@
-<div class="modal fade" id="historyModal-{{ member.id }}" tabindex="-1">
+<div class="modal fade" id="historyModal-{{ member_type }}-{{ member.id }}" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-
-      <form method="post">
-        {% csrf_token %}
-        
         <div class="modal-header">
           <h5 class="modal-title">
             変更履歴（{{ member.name }}）
@@ -13,17 +9,16 @@
         </div>
 
         <div class="modal-body">
-          {{ member.change_history }}
+          {{ member.change_history | linebreaksbr }}
         </div>
 
         <div class="modal-footer">
           <button
-            type="submit"
-            class="btn btn-primary">
+            type="button"
+            class="btn btn-primary" data-bs-dismiss="modal">
             閉じる
           </button>
         </div>
-      </form>
     </div>
   </div>
 </div>
