--- a/app/templates/app/partials/member_cell.html
+++ b/app/templates/app/partials/member_cell.html
@@ -1,47 +1,49 @@
 {% load static %}
 
 <div class="d-flex align-items-center">
-  <div>
-    {{ member.name }}
-  </div>
+    <div>
+        {{ member.name }}
+    </div>
 
     <button type="button"
+            id="{{ member_type }}_change_history-{{ member.id }}"
             class="icon-button"
             data-bs-toggle="modal"
-            data-bs-target="#historyModal-{{ member.id }}"
+            name="{{ member_type }}_change_history"
+            data-bs-target="#historyModal-{{ member_type }}-{{ member.id }}"
             aria-label="更新情報を表示">
         <img src="{% static 'images/eye.svg' %}"
             alt=""
             class="eye_icon_img">
     </button>
-    {% include "app/partials/history_modal.html" with member=member member_type="member_type" %}
-        
+    {% include "app/partials/history_modal.html" with member=member member_type=member_type %}
 </div>
 
 {{ member.display | linebreaksbr }}
 
-<div class="mt-1">
-  <form method="post" action="{% url 'info_dispatch' work_date=work_date %}">
-    {% csrf_token %}
-    <div class="d-flex gap-1">
-        {% if info.place_id > 0 %}
+<div class="mt-1 d-flex gap-1">
+    {% if info.place_id > 0 %}
+    <div style="margin-bottom: 16px;"><!-- formタグ内のボタンとスタイルを合わせるための下マージン -->
         <button type="button"
-                id="{{ member_type }}_current_status_edit-{{ member.id }}"
-                class="btn btn-sm {{ member.current_status_btn_class }}"
+                id="current_status_edit-{{ member_type }}-{{ member.id }}"
+                class="btn btn-sm {{ member.current_status_btn_class }} scroll-save"
+                name="current_status_edit_{{ member_type }}_{{ member.id }}"
                 data-bs-toggle="modal"
-                data-bs-target="#statusModal-{{ member.id }}">
+                data-bs-target="#statusModal-{{ member_type }}-{{ member.id }}">
             {{ member.current_status_text }}
         </button>
-        {% include "app/partials/current_status_modal.html" with member=member member_type=member_type current_status_choices=current_status_choices place_id=info.place_id %}
-        {% endif %}
-
+    </div>
+    {% include "app/partials/current_status_modal.html" with member=member member_type=member_type current_status_choices=current_status_choices place_id=info.place_id %}
+    {% endif %}
+    <form method="post" action="{% url 'info_dispatch' work_date=work_date %}">
+        {% csrf_token %}
         <button id="{{ member_type }}_record_edit_btn-{{ member.id }}"
-                class="btn-sm text-nowrap"
+                class="btn-sm text-nowrap scroll-save"
                 type="submit"
                 name="{{ member_type }}_record_edit"
                 value="{{ member.id }}">
             編集
         </button>
-    </div>
-  </form>
+    </form>
 </div>
+
