--- a/app/templates/app/partials/history_modal.html
+++ b/app/templates/app/partials/history_modal.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">
-            変更履歴（{{ member.name }}）
+            変更履歴（{{ member.name.text }}）
           </h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
