--- a/app/templates/app/sysad.html
+++ b/app/templates/app/sysad.html
@@ -9,11 +9,38 @@
 <div class="wrapper">
     <h1>システム管理</h1>
 
+    {% if messages %}
+    <div class="mt-3">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
     <hr class="my-4">
 
-    <form action="{% url 'delete_record' %}" method="post">
+    <form action="{% url 'sysad_update_auto_mode' %}" method="post">
         {% csrf_token %}
         <div>
+            <h4>データの自動作成設定</h4>
+            <p>翌日以降{{ sysad_form.auto_mode_days }}日分の勤務データを自動作成する(休日・祝日等を含む)
+                <button class="btn-sm" type="submit" name="update_auto_mode" value="0">
+                    更新
+                </button>
+            </p>
+            ※0～10で設定できます。（0日の場合は自動作成されません。）
+        </div>    
+    </form>    
+
+    <hr class="my-4">
+
+    <form action="{% url 'sysad_delete_record' %}" method="post">
+        {% csrf_token %}
+        <div>
+            <h4>勤務データの削除</h4>
             {{ calendar_form.date }}のデータを一括削除する
             <button class="btn-sm" type="submit" name="delete_record" value="0" onclick="return confirm('本当に削除しますか？');">
                 実行
@@ -23,16 +50,6 @@
                 ※間違って祝日のデータを作成してしまったときなどに使用してください。<br>
                 ※データが消えますので、十分注意して実行してください。
             </p>
-            {% if messages %}
-            <div class="mt-3">
-                {% for message in messages %}
-                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                {% endfor %}
-            </div>
-            {% endif %}
         </div>    
     </form> 
     
