--- a/app/templates/app/partials/member_record_edit.html
+++ b/app/templates/app/partials/member_record_edit.html
@@ -25,6 +25,12 @@
             {% endif %}
 
             <hr class="my-4">
+            <div>
+                <div>備考：</div>
+                {{ record_form.remarks }}
+            </div>
+
+            <hr class="my-4">
         </div>
 
         <button class="btn-sm" type="submit" name="action" value="save">保存</button>
